fix - Fixed side text stretching in popups

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -34,7 +34,7 @@ img {
     left: 0;
     width: 100%;
     position: relative;
-    display: flex;
+    display: block;
     flex-direction: column;
     gap: 20vh;
     overflow: hidden;
@@ -104,6 +104,7 @@ section {
 #landing {
     width: 100%;
     padding-top: 40px;
+    padding-bottom: 80px;
 }
 
 #landing-background {
@@ -132,6 +133,7 @@ section {
 
 #misc-works {
     position: relative;
+    padding-bottom: 60px;
 }
 
 #wiggle-man {
@@ -140,7 +142,7 @@ section {
     transform: translateY(100%);
     left: 0;
     bottom: 0;
-    transform: translateY(40%);
+    transform: translateY(calc(40% - 60px));
 }
 
 .image-grid {
@@ -152,13 +154,12 @@ section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    gap: 3%;
 }
 
 .image-grid img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     display: block;
     pointer-events: all;
 }
@@ -183,6 +184,7 @@ section {
 
 .animation-slideshow {
     aspect-ratio: 2 / 1;
+    padding-bottom: 60px;
 }
 
 /* #endregion */
@@ -192,8 +194,8 @@ section {
     aspect-ratio: 2555 / 2110;
     position: relative;
     overflow: hidden;
-    width: 60vw;
-    margin-left: 20vw;
+    width: var(--default-width);
+    margin-left: var(--default-margin);
 }
 
 #inactive-region {
